# omics-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  generate_results.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
omics_agent/agents/: base.py  embedding_agent.py  explanation_agent.py  finalize_agent.py  hitl_agent.py  ingestion_agent.py  judge_agent.py  retrieval_agent.py  shap_agent.py  survival_agent.py
omics_agent/api/: main.py  schemas.py
omics_agent/core/: config.py  logging.py  models.py
omics_agent/data/: feature_engineer.py  geneformer_tokenizer.py  tcga_loader.py
omics_agent/embeddings/: cache.py  finetune.py  geneformer_encoder.py
omics_agent/explainability/: shap_aggregator.py  shap_cox.py  shap_deepsurv.py  shap_rsf.py  shap_xgb.py
omics_agent/graph/: graph.py  routing.py  state.py  subgraphs.py
omics_agent/survival/: conformal.py  cox_model.py  deepsurv_model.py  ensemble.py  metrics.py  rsf_model.py  xgb_model.py
omics_agent/vector_store/: indexer.py  pgvector_store.py  retriever.py
scripts/: build_faiss_index.py  download_tcga.py
tests/: conftest.py  test_conformal.py  test_data_pipeline.py  test_explanation_agent.py  test_graph.py  test_judge_agent.py  test_shap.py  test_survival_models.py  test_vector_store.py
