[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omics-agent"
version = "1.0.0"
description = "Agentic cancer survival prognosis with LLM explanation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Rajinikanth Sagapola", email = "sagapolarajinikanth@gmail.com"}]
readme = "README.md"
keywords = ["survival analysis", "LangGraph", "oncology", "explainability", "Geneformer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["omics_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
